--- a/docs/readme
+++ b/docs/readme
@@ -4,7 +4,7 @@ Beta 0.9
 ------------
 
 Created by: Kevin Wells <DarkOppressor@gmail.com>
-See 'docs/LICENSE' for the license that the game and code are under.
+See 'docs/LICENSE.txt' and 'docs/CONTENT-LICENSE.txt' for the license that the game and code are under.
 
 -------
 Summary
